[tool.poetry]
name = "poetry-adv-fun-test"
version = "0.1.0"
description = ""
authors = ["Sailesh Mishra <saileshmishra164@gmail.com>"]
readme = "README.md"
packages = [{ include = "poetry_adv_fun_test", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

