[tool.poetry]
name = "poetry-adv-fun-test"
version = "0.1.3"
description = "A Python library for modeling active and passive electronic components with test coverage."
authors = ["Sailesh Mishra <saileshmishra164@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/saileshmishraindia/poetry-device-lib-testing"
repository = "https://github.com/saileshmishraindia/poetry-device-lib-testing"
keywords = ["electronics", "devices", "poetry", "pytest", "circuit", "components"]
packages = [{ include = "poetry_adv_fun_test", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^7.0.0"
coverage-badge = "^1.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

